<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>

<package format="3">
  <name>cpp_ros_pkg</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="andrea@todo.todo">andrea</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>my_msgs_pkg</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
