<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>

<package format="3">
  <name>python_ros_pkg</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="andrea@todo.todo">andrea</maintainer>
  <license>TODO: License declaration</license>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>my_msgs_pkg</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>

</package>
